# gestor-estudio-arte

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  cliente.py  dashboard.py  item_pedido.py  pedido.py  produto.py
backend/app/routers/: __init__.py  backup.py  clientes.py  dashboard.py  pedidos.py  produtos.py
backend/app/services/: __init__.py  base_service.py  cliente_service.py  dashboard_service.py  pedido_service.py  produto_service.py
backend/app/utils/: imagem.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: App.tsx  index.css  main.jsx  main.tsx
frontend/src/components/: AppPagination.tsx  AsyncAutoComplete.tsx  BackupButton.tsx  ClientForm.tsx  DeleteDialog.tsx  ErrorBoundary.tsx  FormSection.tsx  OrderForm.tsx  PageHeader.tsx  ProductForm.tsx  RangeFilter.tsx  Searchbar.tsx  Sidebar.tsx  SidebarItem.tsx
frontend/src/hooks/: useAppToast.ts
frontend/src/pages/: ClientsPage.jsx  Dashboard.tsx
frontend/src/pages/clientes/: clients.data.ts  create.tsx  delete.ts  index.tsx  routes.tsx  (+1 more)
frontend/src/services/: apiBase.ts  clients.service.ts  factory.ts  orders.service.ts  products.service.ts
frontend/src/types/: cliente.types.ts  common.types.ts  dashboard.types.ts  pedido.types.ts  produto.types.ts
frontend/src/utils/: constants.ts  form.utils.ts  format.utils.ts  loader.utils.ts
scripts/: iniciar_sistema.bat  iniciar_sistema.sh
(+33 files in other folders)
