[project]
name = "gestor-estudio-arte"
version = "1.0"
description = "Gestor de clientes, pedidos e produtos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.129.2",
    "phonenumbers>=9.0.24",
    "pillow>=12.1.1",
    "pydantic-extra-types>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
